Initial changes to move to FFM and have single rust workspace for rust native libraries
Signed-off-by: bharath-techie <bharath78910@gmail.com>